# ur_msg_interface

./: CMakeLists.txt  README.md  package.xml
includes/: control_events.h  ur_control_lib.h
msg/: URActuator.msg  URControl.msg  URControlState.msg  URHeartBeat.msg  URInertialSensor.msg  URSharedImage.msg
src/: ur_control_lib.cc
srv/: FileLoader.srv  FileSaver.srv
